--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,1 @@
-./config/*.crt
-./config/*.key
-./config/*.ovpn
-./config/*.pub
-./config/*.crt
-./config/rasp-options.sh
-./config/*_control
-./mounted/*
+./mounted
